Add upload result to email

--- a/templates/transfer_ok.html
+++ b/templates/transfer_ok.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <p>Transfer to BGarray has succesfully completed for {{filename}}</p>
+        <p>{{upload_result_gatk}}</p>
+        <p>{{upload_result_exomedepth}}</p>
     </body>
 </html>
