--- a/templates/transfer_ok.html
+++ b/templates/transfer_ok.html
@@ -3,15 +3,19 @@
         <p>Transfer to BGarray has succesfully completed for {{filename}}</p>
         {% if upload_result_gatk %}
         <b>Alissa upload GATK</b>
-        {% for upload_result in upload_result_gatk %}
-            <p>{{upload_result}}</p>
-        {% endfor %}
+        <ul>
+            {% for upload_result in upload_result_gatk %}
+                <li>{{upload_result}}</li>
+            {% endfor %}
+        </ul>
         {% endif %}
         {% if upload_result_exomedepth %}
         <b>Alissa upload ExomeDepth</b>
-        {% for upload_result in upload_result_exomedepth %}
-            <p>{{upload_result}}</p>
-        {% endfor %}
+        <ul>
+            {% for upload_result in upload_result_exomedepth %}
+                <li>{{upload_result}}</li>
+            {% endfor %}
+        </ul>
         {% endif %}
     </body>
 </html>
