Parse vcf upload errors

--- a/templates/transfer_ok.html
+++ b/templates/transfer_ok.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <p>Transfer to BGarray has succesfully completed for {{filename}}</p>
+        <p>Transfer to BGarray has completed for {{filename}}</p>
         {% if upload_result_gatk %}
         <b>Alissa upload GATK</b>
         <ul>
