Remove bgarray references

--- a/templates/transfer_error.html
+++ b/templates/transfer_error.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
-        <p>Transfer to BGarray has not been completed for {{filename}}</p>
-    </body>
+  <body>
+    <p>Transfer has not been completed for {{filename}}</p>
+  </body>
 </html>
