--- a/templates/transfer_notcomplete.html
+++ b/templates/transfer_notcomplete.html
@@ -1,6 +1,6 @@
 <html>
-    <body>
-        <p>Data not transferred to BGarray. Run {{filename}}</p>
-        <p>Remove {{run_file}} before datatransfer can be restarted</p>
-    </body>
+  <body>
+    <p>Data not transferred. Run {{filename}}</p>
+    <p>Remove {{run_file}} before datatransfer can be restarted</p>
+  </body>
 </html>
