changed upload to franklin_vcf_upload

--- a/templates/transfer_ok.html
+++ b/templates/transfer_ok.html
@@ -2,7 +2,7 @@
   <body>
     <p>Transfer has completed for {{filename}}</p>
     {% if upload_result_gatk %}
-    <b>Alissa upload GATK</b>
+    <b>Franklin upload GATK</b>
     <ul>
       {% for upload_result in upload_result_gatk %}
       <li>{{upload_result}}</li>
@@ -10,7 +10,7 @@
     </ul>
     {% endif %}
     {% if upload_result_exomedepth %}
-    <b>Alissa upload ExomeDepth</b>
+    <b>Franklin upload ExomeDepth</b>
     <ul>
       {% for upload_result in upload_result_exomedepth %}
       <li>{{upload_result}}</li>
